# d-dox-server

./: Cargo.toml  Dockerfile
config/: development.yaml  test.yaml
examples/: playground.rs
k8s/: deployment.yaml  minio-creds.yaml  secret.yaml
migration/src/: lib.rs  m20250101_000003_create_files.rs  m20250101_000007_create_file_versions.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  files.rs
src/models/: file.rs  file_version.rs  mod.rs  user.rs
tests/models/: users.rs
tests/requests/: auth.rs
