[workspace]

[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "server-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
bcrypt = "0.18.0"
jsonwebtoken = "9.3"
object_store = { version = "0.11", features = ["aws"] }
aws-credential-types = "1"
futures-util = "0.3"

[[bin]]
name = "server-cli"
path = "src/bin/main.rs"
required-features = []
[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []
